# libadjoint

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  README.md
debian/: changelog  control  copyright  python-libadjoint.install  rules
doc/: AUTHORS  autorefcap.sty  design.tex
doc/design/: Makefile  design.tex  elsarticle.cls  literature.bib
doc/manual/: Makefile  about.tex  annotation.aux  annotation.tex  assembly.aux  assembly.tex  callbacks.aux  callbacks.tex  checkpointing.tex  data_callbacks.aux  data_callbacks.tex  debugging.aux  debugging.tex  error_codes.aux  error_codes.tex  introduction.aux  introduction.tex  literature.bib  manual.aux  manual.tex  minitoc.sty  minted.sty  misc.aux  misc.tex  operator_callbacks.aux  operator_callbacks.tex  overview.tex  todo.aux  todo.tex  types.aux  types.tex
include/libadjoint/: adj_adjointer_routines.h  adj_adjointer_visualisation.h  adj_constants.h  adj_core.h  adj_data_structures.h  adj_debug.h  adj_dictionary.h  adj_eps.h  adj_error_handling.h  adj_evaluation.h  adj_fortran.h  adj_gst.h  adj_petsc.h  adj_petsc_data_structures.h  adj_petsc_f.h  adj_predictability.h  adj_setup.h  adj_simplification.h  adj_test_main.h  adj_test_tools.h  adj_variable_lookup.h  html_encode.h  libadjoint.h  revolve.h  revolve_c.h  uthash.h
lib/: exceptions.py  libadjoint.py
python/: CMakeLists.txt  setup.py  setup.py.in
python/ctypeslib/scripts/: h2xml.py  xml2py.py
python/libadjoint/: __init__.py  adj_python_utils.c  clibadjoint.py  clibadjoint.py.in  clibadjoint_constants.py  exceptions.py  libadjoint.py  libadjoint_numpy.py
scripts/: new_release.sh
src/: CMakeLists.txt  adj_adjointer_routines.c  adj_adjointer_visualisation.c  adj_core.c  adj_data_structures.c  adj_debug.c  adj_dictionary.c  adj_eps.c  adj_error_handling.c  adj_evaluation.c  adj_fortran.F90  adj_gst.c  adj_petsc_data_structures.c  adj_predictability.c  adj_python_utils.c  adj_setup.c  adj_simplification.c  adj_test_tools.c  adj_variable_lookup.c  html_encode.c  revolve.cpp  revolve_c.cpp
src/revolve/: makefile
src/tests/: hello_world.c  test_adj_add_variable_data.c  test_adj_array1_data_structures.F90  test_adj_array2_data_structures.F90  test_adj_datatype_size.F90  test_adj_dependencies.c  test_adj_dictionary.F90  test_adj_evaluate_block_action.c  test_adj_evaluate_block_action_nonlinear.F90  test_adj_forget_adjoint_equation.c  test_adj_forget_adjoint_equation_fnl.c  test_adj_forget_equation.c  test_adj_forget_forward_equation.c  test_adj_get_adjoint_equation_block_action.F90  test_adj_iteration_count.F90  test_adj_iteration_count.c  test_adj_nonlinear_derivative_action_callback.F90  test_adj_register_equation.c  test_adj_register_equation_reallocate.c  test_adj_set_functional_dependencies.c  test_adj_set_functional_derivative_dependencies.c  test_adj_test_action_transpose.c  test_adj_test_nonlinear_derivative_action_transpose.c  test_adj_timestep_count.F90  test_adj_variable_comparison.c  test_adj_variable_get_name.F90  test_adj_variable_get_timestep.F90  test_adj_variable_str.c  test_checkpoint_none.c  test_checkpoint_revolve_multistage.c  test_checkpoint_revolve_offline.c  test_checkpoint_revolve_online.c  test_libadjoint_numpy.py  test_main.F90  test_main.c  test_multiple_blocks.F90  test_register_equation.py  test_revolve.c  test_revolve_checkpoint.c
tests/: test_libadjoint_numpy.py
tools/: create_python_constants.py
